first code ever :)

--- a/index.html
+++ b/index.html
@@ -21,24 +21,26 @@
             </nav>
         </header>
         <main>
-            <div id="about" class="contentrow">
+            <div id="about" class="section">
                 <h2>About me</h2>
-                <div>
-                    <img src="assets/cesar_profile_picture.jpg"/>
-                </div>
-                <div>
-                    <p>
-                        I am a PhD candidate in philosophy and a Core Curriculum Preceptor at Columbia University. 
-                    </p>
-                    <p>
-                        My research lies at the intersection of philosophy of race, social philosophy, and the social sciences.
-                    </p>
-                    <p>
-                        My current project draws on these fields to develop an interdisciplinary framework for explaining the resilience of social structures of racial oppression. I am especially interested in explaining what leads agents who self-identify as non-racist to lend their support (active or passive) to practices, policies and institutions that reinforce racial inequality.
-                    </p>
+                <div class="halfsep">
+                    <div>
+                        <!-- <img src="assets/cesar_profile_picture.jpg"/> -->
+                    </div>
+                    <div>
+                        <p>
+                            I am a PhD candidate in philosophy and a Core Curriculum Preceptor at Columbia University. 
+                        </p>
+                        <p>
+                            My research lies at the intersection of philosophy of race, social philosophy, and the social sciences.
+                        </p>
+                        <p>
+                            My current project draws on these fields to develop an interdisciplinary framework for explaining the resilience of social structures of racial oppression. I am especially interested in explaining what leads agents who self-identify as non-racist to lend their support (active or passive) to practices, policies and institutions that reinforce racial inequality.
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div id="research" class="contentrow">
+            <div id="research" class="section">
                 <h2>Research</h2>
                 <div>
                     <h3>Structural Racism and the Explanation of Racial Inequality</h3>
@@ -120,7 +122,7 @@
                     </p>
                 </div>
             </div>
-            <div id="teaching" class="contentrow">
+            <div id="teaching" class="section">
                 <h2>Teaching</h2>
                 <h3>Teaching statement</h3>
                 <p>
@@ -161,8 +163,10 @@
                     <li>Introduction to Philosophy (Fall 2015)</li>
                 </ul>
             </div>
-            <div id="cv" class="contentrow">
-                <a target="blank" rel="noopener noreferrer">Download my CV here.</a>
+            <div id="cv" class="section">
+                <a href="assets/cv_1.20.pdf"
+                target="_blank">
+                Download my CV here.</a>
             </div>
         </main>
         <footer>
